navbar names changed

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 		<nav class="header-menu">
 			<ul id="list" class="header-menu-list">
 				<li class="header-menu-list-item">
-					<a href="#">Inicio</a>
+					<a href="#">Haus</a>
 				</li>
 				<li class="header-menu-list-item">
-					<a href="#">Acerca</a>
+					<a href="#">Straße</a>
 				</li>
 				<li class="header-menu-list-item">
-					<a href="#">Blog</a>
+					<a href="#">Arbeit</a>
 				</li>				
 				<li class="header-menu-list-item">
-					<a href="#">Contacto</a>
+					<a href="#">Schule</a>
 				</li>
 			</ul>
 		</nav>
