--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<button id="submit">Adivina</button>
 			</div>
 			<div class="col-6">
-				<input id="pista" type="button" value="Pista"></input>
+				<input id="pista" type="button" value="Pistas"></input>
 			</div>		
 			<article class="col-12 center">
 				<input id="der" name="articulo" type="radio" value="Der">Der
