--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <header class="header">
 		<div class="header-mobile">
-			<h2 class="header-logo">Logo</h2>
+			<h2 class="header-logo">Power</h2>
 			<button id="btn-nav" class="header-btn-nav">Menu</button>
 		</div>
 		<nav class="header-menu">
